Mon May 17 12:20:43 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Remove win16 support for cleaner win32.  Build
		wconfig under arch-specific subdirs.  Update clean-windows
		directories to reflect current all-windows directories.
		Add distclean-windows target.

Mon May 10 18:56:11 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Back out win16/win32 change.  Does not
		work from clean.  Must wait until win32-only to
		remove /AL flag.

Mon May 10 15:07:11 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Change wconfig build so win16 flags are not used
		for win32 build.

Mon Feb  8 21:42:44 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in: Change Windows kerbsrc.zip target so this now does
		what kerbsrc-nt.zip used to do.  We no longer support
		building krb5 on systems with 8.3 limitations.  Also allow
		binary files in windows/lib to be included into
		kerbsrc.zip file.

Wed Jan 27 17:10:18 1999  Tom Yu  <tlyu@mit.edu>

	* configure.in: Fix typo so that lib/crypto actually gets
 	configured.

1999-01-27  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in, configure.in: Move the responsibility for
		generating Makefile files for the following subdirectories
		to the top-level: util, util/send-pr, util/dyn, lib,
		config-files, and gen-manpages.  

1999-01-26  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* wconfig.c: Updated to be more featureful.  It will now save the
		arguments passed to it and emit it as a makefile variable
		WCONFIG_FLAGS.  This allows the makefile to be able to
		preserve wconfig options in the future when updating
		makefile.  Also added the --win32 and --win16 options to
		force win16 or win32 makefiles.  An option of the form
		--enable-foo will cause lines that begin ##FOO## to be
		uncommented in the Makefile.  The program has also been
		cleaned up so it can be run (for debugging purposes) under
		Unix.

Sat Dec  5 01:14:23 1998  Theodore Y. Ts'o  <tytso@mit.edu>
