@@ -1,3 +1,8 @@
+Mon May 17 20:45:54 1999  Danilo Almeida  <dalmeida@mit.edu>
+
+	* Makefile.in, wconfig.c: Rename config/windows.in to 
+		config/win-pre.in.
+
 Mon May 17 12:20:43 1999  Danilo Almeida  <dalmeida@mit.edu>
 
 	* Makefile.in: Remove win16 support for cleaner win32.  Build
